examples/test/testpolicy4099.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4099
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key23: value10
      key6: value35
      key30: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value41
      podSelector:
        matchLabels:
          key47: value34
